--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                                 <li style="margin-left: 15px;">Certification UDEMY "Developpeur python - Formation complete 2021"</li>
                                 <li style="margin-left: 15px;">Certification UDEMY "Deeplearning avec Tensorflow et Keras 2021"</li>
                                 <li style="margin-left: 15px;">Certification OpenClassRoom "Gerez votre code avec git et github 2019"</li>
-                                <a style="padding-left: 8px;" href="https://www.linkedin.com/in/vladimir-g-020533221">En savoir plus sur mon profil linkedin</a>
                         </p>
 
                         </p>Excel :
@@ -67,7 +66,7 @@
 
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
-        <h2>Portfolio v3</h2>
+        <h2>Portfolio</h2>
         
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
             
@@ -128,11 +127,11 @@
                 <table class="col_portfolio" border="1" style="height: 100%; width: 100%;">
                     <tr>
                         <td><div class="barre-verticale"></div></td>
-                        <td style="width: 100%;"><a href="portfolio-application_mrbeat.html"><img style="width: 100%" src="excel-logo.png"></td>
+                        <td style="width: 100%;"><a href="portfolio-excel.html"><img style="width: 100%" src="excel-logo.png"></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-application_mrbeat.html">Demonstateur Excel - TDB / KPI / VBA</a></td>
+                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-excel.html">Demonstateur Excel - TDB / KPI / VBA</a></td>
                     </tr>
                 </table>
             </div>
@@ -141,11 +140,11 @@
                 <table class="col_portfolio" border="1" style="height: 100%; width: 100%;">
                     <tr>
                         <td><div class="barre-verticale"></div></td>
-                        <td style="width: 100%;"><a href="portfolio-site_deeplearning.html"><img style="width: 100%" src="logo_optinav.png"></td>
+                        <td style="width: 100%;"><a href="portfolio-windev.html"><img style="width: 100%" src="logo_optinav.png"></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-site_deeplearning.html">Projet Windev</a></td>
+                        <td align="center" style="vertical-align: bottom;"><a href="portfolio-windev.html">Projet Windev</a></td>
                     </tr>
                 </table>
             </div>
