--- a/portfolio-windev.html
+++ b/portfolio-windev.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
+    <meta name="googlebot" content="noindex">
+    <title>Site web de restaurant</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- header -->
+    <div class="portfolio-header">
+            <div class="texte-avec-ligne-verticale"
+            style="margin-left: 16px; margin-top: 22px; height: 45px;">
+                <p class="portfolio-header-title">Vlad Gui</p>
+            </div>
+            <a class="contact_button contact_button_portfolio"
+            href="mailto:mon_email@gmx.fr?subject=Contact%20Dev">Me contacter</a>
+    </div>
 
+    <!-- section grise titre -->
+        <!-- =SECTION GRISE 1 -->
+    <div class="section section_grise1" style="padding-top: 20px">
+        <a class="portfolio-back" href="index.html">Retour</a>
+        <div class="separateur_gris" style="margin-top:-12px"></div>
+        <h1 class="portfolio">PORTFOLIO</h1>
+        <h2 class="portfolio">Site web pour un restaurant</h2>
+    </div>
+
+    <!-- section grise contenu -->
+    <div class="section">
+        <div class="texte-avec-ligne-verticale">
+            <p>
+                Voici un site dédié à un restaurant, celui ci integre plusieurs fonctionnalités.<br><br>
+                Reservation de tables, ...<br><br>
+                <u>Technologies utilisées :</u> <b>HTML, CSS, DJANGO, PYTHON, HEROKU</b>
+            </p>
+        </div>
+    </div>
+
+    <!-- SECTION GRISE 2 -->
+    <div class="section section_grise2">
+        <h2>Portfolio</h2>
+        <table class="col_portfolio" style="display: inline-block;" border="0">
+            <tr align="center">
+                <td><div class="barre-verticale"></div></td>
+                <td style="width: 100%;"><a href="https://got-pizzamamadjango.herokuapp.com/"><img class="portfolio" src="project1small.jpg"></a></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center"><a href="https://got-pizzamamadjango.herokuapp.com/">Application Web</a></td>
+            </tr>
+        </table>
+        <table class="col_portfolio float-right" border="0">
+            <tr align="center">
+                <td><div class="barre-verticale"></div></td>
+                <td style="width: 100%;"><a href="https://github.com/vladimir-gui/kivy-projet-pizza-got/releases"><img class="portfolio" src="project1small kivy.jpg"></a></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td align="center"><a href="https://github.com/vladimir-gui/kivy-projet-pizza-got/releases">Application Desktop, Android, IOS</a></td>
+            </tr>
+        </table>
+    </div>
+    <!-- FRAME -->
+    <iframe src="contact-frame.html" scrolling="no"></iframe>
+</body>
+</html>
