--- a/portfolio-excel.html
+++ b/portfolio-excel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
-    <title>Site web de restaurant</title>
+    <title>Page Excel</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,16 +25,15 @@
         <a class="portfolio-back" href="index.html">Retour</a>
         <div class="separateur_gris" style="margin-top:-12px"></div>
         <h1 class="portfolio">PORTFOLIO</h1>
-        <h2 class="portfolio">Site web pour un restaurant</h2>
+        <h2 class="portfolio">Page démonstration Excel</h2>
     </div>
 
     <!-- section grise contenu -->
     <div class="section">
         <div class="texte-avec-ligne-verticale">
             <p>
-                Voici un site dédié à un restaurant, celui ci integre plusieurs fonctionnalités.<br><br>
-                Reservation de tables, ...<br><br>
-                <u>Technologies utilisées :</u> <b>HTML, CSS, DJANGO, PYTHON, HEROKU</b>
+                Voici une démonstration de fichier Excel <br><br>avancé.<br><br>
+                <u>Technologies utilisées :</u> <b>Excel, VBA, PowerQuery</b>
             </p>
         </div>
     </div>
