--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
     <!-- SECTION GRISE 2 -->
      <div class="section section_grise2">
-        <h2>Portfolio</h2>
+        <h2>Portfolio v1</h2>
         
         <div class="portfolio-container">
             <div class="col_portfolio">
                 <table class="portfolio-table">
                         <tr>
-                            <td><div class="barre-verticale"></div></td>
+                            <td class="barre-cell"><div class="barre-verticale"></div></td>
                             <td><a href="portfolio-site-restaurant.html"><img src="project1small.jpg" alt="projet resto"></a></td>
                         </tr>
                         <tr>
