--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- SECTION GRISE 2 -->
      <div class="section section_grise2">
-        <h2>Portfolio v1</h2>
+        <h2>Portfolio</h2>
         
         <div class="portfolio-container">
             <div class="col_portfolio">
