--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="col_portfolio">
                 <table class="portfolio-table">
                     <tr>
-                        <td><div class="barre-verticale"></div></td>
+                        <td class="barre-cell"><div class="barre-verticale"></div></td>
                         <td><a href="portfolio-application_galaxy.html"><img src="project_galaxy_bg1small.jpg" alt="project galaxy"></a></td>
                     </tr>
                     <tr>
