--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
              <div class="col_portfolio">
                 <table class="portfolio-table">
                     <tr>
-                        <td><div class="barre-verticale"></div></td>
+                        <td class="barre-cell"><div class="barre-verticale"></div></td>
                         <td><a href="portfolio-application_mrbeat.html"><img src="project_mrbeat_logo.png" alt="project mrbeat"></a></td>
                     </tr>
                     <tr>
@@ -111,7 +111,7 @@
             <div class="col_portfolio">
                 <table class="portfolio-table">
                     <tr>
-                        <td><div class="barre-verticale"></div></td>
+                        <td class="barre-cell"><div class="barre-verticale"></div></td>
                         <td><a href="portfolio-site_deeplearning.html"><img src="ANN.png" alt="ANN"></a></td>
                     </tr>
                     <tr>
@@ -125,7 +125,7 @@
             <div class="col_portfolio">
                 <table class="portfolio-table">
                     <tr>
-                        <td><div class="barre-verticale"></div></td>
+                        <td class="barre-cell"><div class="barre-verticale"></div></td>
                         <td><a href="portfolio-excel.html"><img  src="excel-logo.png" alt="Excel"></a></td>
                     </tr>
                     <tr>
@@ -138,7 +138,7 @@
             <div class="col_portfolio">
                 <table class="portfolio-table">
                     <tr>
-                        <td><div class="barre-verticale"></div></td>
+                        <td class="barre-cell"><div class="barre-verticale"></div></td>
                         <td><a href="portfolio-windev.html"><img src="logo_optinav.png" alt="projet windev"></a></td>
                     </tr>
                     <tr>
@@ -147,8 +147,6 @@
                     </tr>
                 </table>
             </div>
-
-            
         </div>
     </div>
 
