--- a/portfolio-excel.html
+++ b/portfolio-excel.html
@@ -32,7 +32,7 @@
     <div class="section">
         <div class="texte-avec-ligne-verticale">
             <p>
-                Voici une démonstration de fichier Excel <br><br>avancé.<br><br>
+                Voici une démonstration de fichier Excel <br><br>avancée.<br><br>
                 <u>Technologies utilisées :</u> <b>Excel, VBA, PowerQuery</b>
             </p>
         </div>
@@ -44,21 +44,21 @@
         <table class="col_portfolio" style="display: inline-block;" border="0">
             <tr align="center">
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="https://got-pizzamamadjango.herokuapp.com/"><img class="portfolio" src="project1small.jpg"></a></td>
+                <td style="width: 100%;"><a href="/"><img class="portfolio" src="excel-logo.png"></a></td>
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="https://got-pizzamamadjango.herokuapp.com/">Application Web</a></td>
+                <td align="center"><a href="/">Fichier démonstration 1</a></td>
             </tr>
         </table>
         <table class="col_portfolio float-right" border="0">
-            <tr align="center">
+             <tr align="center">
                 <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="https://github.com/vladimir-gui/kivy-projet-pizza-got/releases"><img class="portfolio" src="project1small kivy.jpg"></a></td>
+                <td style="width: 100%;"><a href="/"><img class="portfolio" src="excel-logo.png"></a></td>
             </tr>
             <tr>
                 <td></td>
-                <td align="center"><a href="https://github.com/vladimir-gui/kivy-projet-pizza-got/releases">Application Desktop, Android, IOS</a></td>
+                <td align="center"><a href="/">Fichier démonstration 2</a></td>
             </tr>
         </table>
     </div>
