--- a/portfolio-excel.html
+++ b/portfolio-excel.html
@@ -13,7 +13,7 @@
     <div class="portfolio-header">
             <div class="texte-avec-ligne-verticale"
             style="margin-left: 16px; margin-top: 22px; height: 45px;">
-                <p class="portfolio-header-title">Vlad Gui</p>
+                <p class="portfolio-header-title">Vladimir Guillochet</p>
             </div>
             <a class="contact_button contact_button_portfolio"
             href="mailto:mon_email@gmx.fr?subject=Contact%20Dev">Me contacter</a>
