--- a/portfolio-excel.html
+++ b/portfolio-excel.html
@@ -41,7 +41,7 @@
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
         <h2>Portfolio</h2>
-        <table class="col_portfolio" style="display: inline-block;" border="0">
+        <table class="col_portfolio">
             <tr align="center">
                 <td><div class="barre-verticale"></div></td>
                 <td style="width: 100%;"><a href="/"><img class="portfolio" src="excel-logo.png"></a></td>
@@ -51,7 +51,7 @@
                 <td align="center"><a href="/">Fichier démonstration 1</a></td>
             </tr>
         </table>
-        <table class="col_portfolio float-right" border="0">
+        <table class="col_portfolio">
              <tr align="center">
                 <td><div class="barre-verticale"></div></td>
                 <td style="width: 100%;"><a href="/"><img class="portfolio" src="excel-logo.png"></a></td>
