--- a/portfolio-excel.html
+++ b/portfolio-excel.html
@@ -41,27 +41,36 @@
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
         <h2>Portfolio</h2>
-        <table class="col_portfolio">
-            <tr align="center">
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="/"><img class="portfolio" src="excel-logo.png"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="/">Fichier démonstration 1</a></td>
-            </tr>
-        </table>
-        <table class="col_portfolio">
-             <tr align="center">
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="/"><img class="portfolio" src="excel-logo.png"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="/">Fichier démonstration 2</a></td>
-            </tr>
-        </table>
+
+        <div class="portfolio-container">
+            <div class="col_portfolio">
+                <table class="portfolio-table">
+                        <tr>
+                            <td class="barre-cell" style="vertical-align: middle;"><div class="barre-verticale"></div></td>
+                            <td><a href="portfolio-site-restaurant.html"><img src="excel-logo.png" alt="demo1 excel"></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td align="center" style="vertical-align: bottom;"><a href="/">Fichier démonstration 1</a></td>
+                        </tr>
+                </table>
+            </div>
+
+
+         <div class="col_portfolio">
+                <table class="portfolio-table">
+                    <tr>
+                        <td class="barre-cell"><div class="barre-verticale"></div></td>
+                        <td><a href="portfolio-application_galaxy.html"><img src="excel-logo.png" alt="demo2 excel"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td align="center"><a href="/">Fichier démonstration 2</a></td>
+                    </tr>
+                </table>
+            </div>
     </div>
+        
     <!-- FRAME -->
     <iframe src="contact-frame.html" scrolling="no"></iframe>
 </body>
