--- a/portfolio-excel.html
+++ b/portfolio-excel.html
@@ -47,7 +47,7 @@
                 <table class="portfolio-table">
                         <tr>
                             <td class="barre-cell" style="vertical-align: middle;"><div class="barre-verticale"></div></td>
-                            <td><a href="portfolio-site-restaurant.html"><img src="excel-logo.png" alt="demo1 excel"></a></td>
+                            <td><a href="/"><img src="excel-logo.png" alt="demo1 excel"></a></td>
                         </tr>
                         <tr>
                             <td></td>
@@ -61,7 +61,7 @@
                 <table class="portfolio-table">
                     <tr>
                         <td class="barre-cell"><div class="barre-verticale"></div></td>
-                        <td><a href="portfolio-application_galaxy.html"><img src="excel-logo.png" alt="demo2 excel"></a></td>
+                        <td><a href="/"><img src="excel-logo.png" alt="demo2 excel"></a></td>
                     </tr>
                     <tr>
                         <td></td>
