--- a/portfolio-windev.html
+++ b/portfolio-windev.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
-    <title>Site web de restaurant</title>
+    <title>Page Windev</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="portfolio-header">
             <div class="texte-avec-ligne-verticale"
             style="margin-left: 16px; margin-top: 22px; height: 45px;">
-                <p class="portfolio-header-title">Vlad Gui</p>
+                <p class="portfolio-header-title">Vladimir Guillochet</p>
             </div>
             <a class="contact_button contact_button_portfolio"
             href="mailto:mon_email@gmx.fr?subject=Contact%20Dev">Me contacter</a>
@@ -25,16 +25,15 @@
         <a class="portfolio-back" href="index.html">Retour</a>
         <div class="separateur_gris" style="margin-top:-12px"></div>
         <h1 class="portfolio">PORTFOLIO</h1>
-        <h2 class="portfolio">Site web pour un restaurant</h2>
+        <h2 class="portfolio">Programmation Windev</h2>
     </div>
 
     <!-- section grise contenu -->
     <div class="section">
         <div class="texte-avec-ligne-verticale">
             <p>
-                Voici un site dédié à un restaurant, celui ci integre plusieurs fonctionnalités.<br><br>
-                Reservation de tables, ...<br><br>
-                <u>Technologies utilisées :</u> <b>HTML, CSS, DJANGO, PYTHON, HEROKU</b>
+                Voici la demonstration de réalisation en utilisant AGL Windev.<br><br>
+                <u>Technologies utilisées :</u> <b>Windev client, Windev serveur</b>
             </p>
         </div>
     </div>
@@ -42,27 +41,25 @@
     <!-- SECTION GRISE 2 -->
     <div class="section section_grise2">
         <h2>Portfolio</h2>
-        <table class="col_portfolio" style="display: inline-block;" border="0">
-            <tr align="center">
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="https://got-pizzamamadjango.herokuapp.com/"><img class="portfolio" src="project1small.jpg"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="https://got-pizzamamadjango.herokuapp.com/">Application Web</a></td>
-            </tr>
-        </table>
-        <table class="col_portfolio float-right" border="0">
-            <tr align="center">
-                <td><div class="barre-verticale"></div></td>
-                <td style="width: 100%;"><a href="https://github.com/vladimir-gui/kivy-projet-pizza-got/releases"><img class="portfolio" src="project1small kivy.jpg"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td align="center"><a href="https://github.com/vladimir-gui/kivy-projet-pizza-got/releases">Application Desktop, Android, IOS</a></td>
-            </tr>
-        </table>
+
+        <div class="portfolio-container">
+            <div class="col_portfolio">
+                <table class="portfolio-table">
+                        <tr>
+                            <td class="barre-cell" style="vertical-align: middle;"><div class="barre-verticale"></div></td>
+                            <td><a href="/"><img src="logo_optinav.png" alt="demo1 optinav"></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td align="center" style="vertical-align: bottom;"><a href="/">Projet windev</a></td>
+                        </tr>
+                </table>
+            </div>
     </div>
+
+
+
+
     <!-- FRAME -->
     <iframe src="contact-frame.html" scrolling="no"></iframe>
 </body>
