--- a/portfolio-excel.html
+++ b/portfolio-excel.html
@@ -61,11 +61,11 @@
                 <table class="portfolio-table">
                     <tr>
                         <td class="barre-cell"><div class="barre-verticale"></div></td>
-                        <td><a href="/"><img src="excel-logo.png" alt="demo2 excel"></a></td>
+                        <td><a href="https://github.com/vladimir-gui/Demo_Excel"><img src="excel-logo.png" alt="demo2 excel"></a></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center"><a href="/">Fichier démonstration 2</a></td>
+                        <td align="center"><a href="https://github.com/vladimir-gui/Demo_Excel">Fichier démonstration 2</a></td>
                     </tr>
                 </table>
             </div>
