--- a/portfolio-excel.html
+++ b/portfolio-excel.html
@@ -47,11 +47,11 @@
                 <table class="portfolio-table">
                         <tr>
                             <td class="barre-cell" style="vertical-align: middle;"><div class="barre-verticale"></div></td>
-                            <td><a href="https://github.com/vladimir-gui/Demo_Excel"><img src="excel-logo.png" alt="demo1 excel"></a></td>
+                            <td><a href="https://github.com/vladimir-gui/Demo_Excel/releases/download/Demo1/Demo1.xlsx"><img src="excel-logo.png" alt="demo1 excel"></a></td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td align="center" style="vertical-align: bottom;"><a href="https://github.com/vladimir-gui/Demo_Excel">Fichier démonstration 1</a></td>
+                            <td align="center" style="vertical-align: bottom;"><a href="https://github.com/vladimir-gui/Demo_Excel/releases/download/Demo1/Demo1.xlsx">Fichier démonstration 1</a></td>
                         </tr>
                 </table>
             </div>
@@ -61,11 +61,11 @@
                 <table class="portfolio-table">
                     <tr>
                         <td class="barre-cell"><div class="barre-verticale"></div></td>
-                        <td><a href="https://github.com/vladimir-gui/Demo_Excel"><img src="excel-logo.png" alt="demo2 excel"></a></td>
+                        <td><a href="https://github.com/vladimir-gui/Demo_Excel/releases/download/Demo2/Demo2.xlsm"><img src="excel-logo.png" alt="demo2 excel"></a></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td align="center"><a href="https://github.com/vladimir-gui/Demo_Excel">Fichier démonstration 2</a></td>
+                        <td align="center"><a href="https://github.com/vladimir-gui/Demo_Excel/releases/download/Demo2/Demo2.xlsm">Fichier démonstration 2</a></td>
                     </tr>
                 </table>
             </div>
