--- a/portfolio-windev.html
+++ b/portfolio-windev.html
@@ -47,11 +47,11 @@
                 <table class="portfolio-table">
                         <tr>
                             <td class="barre-cell" style="vertical-align: middle;"><div class="barre-verticale"></div></td>
-                            <td><a href="/"><img src="logo_optinav.png" alt="demo1 optinav"></a></td>
+                            <td><a href="https://github.com/vladimir-gui/projet_WINDEV/releases/download/demo/DemoWindev.exe"><img src="logo_optinav.png" alt="demo1 optinav"></a></td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td align="center" style="vertical-align: bottom;"><a href="/">Projet windev</a></td>
+                            <td align="center" style="vertical-align: bottom;"><a href="https://github.com/vladimir-gui/projet_WINDEV/releases/download/demo/DemoWindev.exe">Projet windev</a></td>
                         </tr>
                 </table>
             </div>
