--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="cover">
         <img class="cover_profile" src="photo_profil.jpg">
         <h1>Vladimir Guillochet</h1>
-        <p>Developpeur fullstack | 4 ans d'experience</p>
+        <p>Technicien supérieur en système industriel et developpeur fullstack</p>
         <div style="text-align: center;">
             <a class="contact_button" href="mailto:vladimir.guillochet@gmx.fr?subject=Contact%20Dev">Me contacter</a>
         </div>
