--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="cover_contact">
             <p><a href="mailto:vladimir.guillochet@gmx.fr?subject=Contact%20Dev">vladimir.guillochet@gmx.fr</a></p>
-            <a href="tel:+33616358420">06 16 35 84 20</a>
+            <a href="tel:+336"></a>
         </div>
     </div>
 
